[gd_scene load_steps=24 format=2]

[ext_resource path="res://Puzzles/Images/Lock screen.png" type="Texture" id=1]
[ext_resource path="res://Puzzles/Images/Assets_Lock_full.png" type="Texture" id=2]
[ext_resource path="res://Puzzles/Images/Lock left line.png" type="Texture" id=3]
[ext_resource path="res://Puzzles/Images/Lock right line.png" type="Texture" id=4]
[ext_resource path="res://Puzzles/Images/Assets_Lock_top_and_bottom_border.png" type="Texture" id=5]
[ext_resource path="res://Puzzles/Scripts/ControlBlock.gd" type="Script" id=6]
[ext_resource path="res://Puzzles/Images/Lock block.png" type="Texture" id=7]
[ext_resource path="res://Puzzles/Scripts/Block1V.gd" type="Script" id=8]
[ext_resource path="res://Puzzles/Scripts/Block2V.gd" type="Script" id=9]
[ext_resource path="res://Puzzles/Scripts/Block1H.gd" type="Script" id=10]
[ext_resource path="res://Puzzles/Scripts/Block2H.gd" type="Script" id=11]
[ext_resource path="res://Puzzles/Scripts/Block3H.gd" type="Script" id=12]
[ext_resource path="res://Puzzles/Scripts/Block4H.gd" type="Script" id=13]
[ext_resource path="res://Assets/Images/DoorBlock.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7.74416, 12.0244 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 27.4439, 9.53854 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 16.7321, 26.2378 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 30.5327, 26.1987 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 30.9639, 26.7457 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 31.3076, 29.4661 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 31.2284, 28.0067 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 19.2, 42.6667 )

[node name="Puzzle" type="Node" index="0"]

__meta__ = {
"_edit_horizontal_guides_": [ 0.0 ]
}

[node name="Background" type="Node" parent="." index="0"]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Background" index="0"]

position = Vector2( 360, 216.051 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite2" type="Sprite" parent="Background" index="1"]

position = Vector2( 360, 216.05 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Walls" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="LockLeftWall" type="StaticBody2D" parent="Walls" index="0"]

editor/display_folded = true
modulate = Color( 0.925781, 0.796695, 0.711196, 1 )
position = Vector2( 93.7323, 214.677 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/LockLeftWall" index="0"]

position = Vector2( -0.285172, 1.26611 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/LockLeftWall" index="1"]

build_mode = 0
polygon = PoolVector2Array( 82.5197, -72.4072, 73.5782, -70.5357, 56.9428, -52.4447, 45.9219, -27.4917, 39.6836, -3.16249, 34.4851, 30.94, 33.6924, 83.1051, 37.2745, 117.136, 47.4239, 154.151, 62.3495, 180.42, 83.8423, 198.928, 87.0077, 195.805, 86.4493, 189.104, 77.1434, 188.174, 63.3707, 174.029, 52.948, 152.811, 42.7115, 115.402, 40.1059, 96.2313, 39.793, 28.6017, 44.8864, -4.50543, 52.9509, -30.6091, 64.1989, -53.7416, 76.2957, -67.3241, 83.5113, -67.9607 )

[node name="LockRightWall" type="StaticBody2D" parent="Walls" index="1"]

editor/display_folded = true
modulate = Color( 0.92549, 0.796078, 0.709804, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/LockRightWall" index="0"]

position = Vector2( 360.599, 215.726 )
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/LockRightWall" index="1"]

build_mode = 0
polygon = PoolVector2Array( 538.329, 142.741, 541.631, 142.441, 559.571, 157.903, 569.404, 175.918, 577.21, 197.1, 582.149, 215.91, 585.752, 235.65, 587.583, 269.457, 586.907, 305.065, 581.698, 341.019, 572.616, 370.848, 558.19, 396.353, 546.39, 407.057, 535.957, 411.185, 536.257, 404.129, 545.189, 403.829, 556.598, 392.645, 564.48, 378.384, 569.058, 367.65, 574.718, 348.435, 578.246, 333.378, 582.314, 305.081, 583.365, 284.769, 583.455, 258.889, 581.248, 235.966, 578.441, 217.306, 571.685, 191.65, 560.396, 165.514, 548.222, 150.563, 544.544, 147.56, 538.089, 147.485, 537.944, 143.17 )

[node name="LockBottonAndTop" type="StaticBody2D" parent="Walls" index="2"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/LockBottonAndTop" index="0"]

modulate = Color( 0.92549, 0.796078, 0.709804, 1 )
position = Vector2( 360.676, 215.692 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/LockBottonAndTop" index="1"]

build_mode = 0
polygon = PoolVector2Array( 176.961, 140.946, 540.035, 140.946, 545.644, 149.36, 541.563, 147.271, 174.911, 147.155, 174.098, 142.029 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls/LockBottonAndTop" index="2"]

position = Vector2( 0, 99.0356 )
scale = Vector2( 1, 0.757575 )
build_mode = 0
polygon = PoolVector2Array( 173.026, 402.514, 334.385, 402.558, 334.52, 410.956, 174.244, 411.178 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Walls/LockBottonAndTop" index="3"]

build_mode = 0
polygon = PoolVector2Array( 396.709, 404.491, 396.709, 409.905, 538.304, 410.041, 537.898, 404.761 )

[node name="VBlocks" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="BlockMain" type="KinematicBody2D" parent="VBlocks" index="0"]

editor/display_folded = true
modulate = Color( 0.988281, 0.0193024, 0.0193024, 1 )
position = Vector2( 362.322, 186.9 )
scale = Vector2( 0.823794, 1.41559 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 6 )
_sections_unfolded = [ "Pickable", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBlocks/BlockMain" index="0"]

position = Vector2( 3.12259, -6.05331 )
scale = Vector2( 4.03118, 1.88664 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="VBlocks/BlockMain" index="1"]

position = Vector2( 3.3157, -5.80314 )
rotation = 1.5704
scale = Vector2( 2.75558, 10.3757 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="VBlocks/BlockMain" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBlocks/BlockMain/Area2D" index="0"]

position = Vector2( 3.52023, -4.49056 )
scale = Vector2( 1.11563, 2.27853 )
shape = SubResource( 2 )

[node name="Block1V" type="KinematicBody2D" parent="VBlocks" index="1"]

editor/display_folded = true
position = Vector2( 454.564, 356.486 )
scale = Vector2( 1.4845, 1.73387 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 8 )
_sections_unfolded = [ "Pickable", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBlocks/Block1V" index="0"]

position = Vector2( 3.34207, 0.0257263 )
scale = Vector2( 2.77829, 2.30877 )
shape = SubResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite" type="Sprite" parent="VBlocks/Block1V" index="1"]

position = Vector2( 3.30712, 5.23711e-008 )
rotation = -1.5708
scale = Vector2( 3.45449, 7.11864 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="VBlocks/Block1V" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBlocks/Block1V/Area2D" index="0"]

position = Vector2( 3.36348, 0 )
scale = Vector2( 1.17046, 1 )
shape = SubResource( 3 )

[node name="Block2V" type="KinematicBody2D" parent="VBlocks" index="2"]

editor/display_folded = true
position = Vector2( 196.9, 254.476 )
scale = Vector2( 0.905143, 2.02607 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 9 )
_sections_unfolded = [ "Pickable", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBlocks/Block2V" index="0"]

position = Vector2( 0.052063, -0.470566 )
scale = Vector2( 4.05828, 2.65831 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="VBlocks/Block2V" index="1"]

position = Vector2( -0.325987, -0.496799 )
rotation = 1.5708
scale = Vector2( 3.96205, 10.4124 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="VBlocks/Block2V" index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBlocks/Block2V/Area2D" index="0"]

position = Vector2( -0.369407, -0.360369 )
scale = Vector2( 2.94004, 3.06664 )
shape = SubResource( 4 )

[node name="HBlocks" type="Node" parent="." index="3"]

editor/display_folded = true

[node name="Block1H" type="KinematicBody2D" parent="HBlocks" index="0"]

editor/display_folded = true
position = Vector2( 251.823, 348.703 )
scale = Vector2( 1.43173, 0.931854 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 10 )
_sections_unfolded = [ "Pickable", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBlocks/Block1H" index="0"]

position = Vector2( -0.290222, 0.298462 )
scale = Vector2( 4.09898, 2.36205 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="HBlocks/Block1H" index="1"]

position = Vector2( -0.306557, 0.649448 )
scale = Vector2( 3.95564, 9.36823 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="HBlocks/Block1H" index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBlocks/Block1H/Area2D" index="0"]

shape = SubResource( 5 )

[node name="Block2H" type="KinematicBody2D" parent="HBlocks" index="1"]

editor/display_folded = true
position = Vector2( 361.42, 349.023 )
scale = Vector2( 2.04796, 0.954004 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 11 )
_sections_unfolded = [ "Pickable", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBlocks/Block2H" index="0"]

position = Vector2( 0.305618, 0.042572 )
scale = Vector2( 4.08112, 2.3337 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="HBlocks/Block2H" index="1"]

position = Vector2( 0.1178, -0.219759 )
rotation = 1.5708
scale = Vector2( 3.46698, 10.5388 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="HBlocks/Block2H" index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBlocks/Block2H/Area2D" index="0"]

shape = SubResource( 6 )

[node name="Block3H" type="KinematicBody2D" parent="HBlocks" index="2"]

editor/display_folded = true
position = Vector2( 496.888, 275.373 )
scale = Vector2( 1.20182, 1.02493 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 12 )
_sections_unfolded = [ "Pickable", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBlocks/Block3H" index="0"]

position = Vector2( -0.154694, 0.220551 )
scale = Vector2( 4.10939, 2.56185 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="HBlocks/Block3H" index="1"]

position = Vector2( -0.154681, 0.480837 )
scale = Vector2( 4.0238, 10.4478 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="HBlocks/Block3H" index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBlocks/Block3H/Area2D" index="0"]

shape = SubResource( 7 )

[node name="Block4H" type="KinematicBody2D" parent="HBlocks" index="3"]

editor/display_folded = true
position = Vector2( 316.916, 240.179 )
scale = Vector2( 2.81224, 0.917315 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 13 )
_sections_unfolded = [ "Pickable", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBlocks/Block4H" index="0"]

position = Vector2( 0.0140457, 0.220551 )
scale = Vector2( 4.12203, 2.56185 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="HBlocks/Block4H" index="1"]

position = Vector2( 0.0585108, 0.824496 )
scale = Vector2( 3.99794, 10.4103 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="HBlocks/Block4H" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBlocks/Block4H/Area2D" index="0"]

shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="." index="4"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 365.25, 417 )
rotation = -1.5708
scale = Vector2( 0.40625, 1 )
texture = ExtResource( 14 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Goal" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 366.842, 413.551 )
scale = Vector2( 2, 0.249045 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal" index="0"]

shape = SubResource( 9 )

[connection signal="mouse_entered" from="VBlocks/BlockMain/Area2D" to="VBlocks/BlockMain" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="VBlocks/BlockMain/Area2D" to="VBlocks/BlockMain" method="_on_Area2D_mouse_exited"]

[connection signal="mouse_entered" from="VBlocks/Block1V/Area2D" to="VBlocks/Block1V" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="VBlocks/Block1V/Area2D" to="VBlocks/Block1V" method="_on_Area2D_mouse_exited"]

[connection signal="mouse_entered" from="VBlocks/Block2V/Area2D" to="VBlocks/Block2V" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="VBlocks/Block2V/Area2D" to="VBlocks/Block2V" method="_on_Area2D_mouse_exited"]

[connection signal="mouse_entered" from="HBlocks/Block1H/Area2D" to="HBlocks/Block1H" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="HBlocks/Block1H/Area2D" to="HBlocks/Block1H" method="_on_Area2D_mouse_exited"]

[connection signal="mouse_entered" from="HBlocks/Block2H/Area2D" to="HBlocks/Block2H" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="HBlocks/Block2H/Area2D" to="HBlocks/Block2H" method="_on_Area2D_mouse_exited"]

[connection signal="mouse_entered" from="HBlocks/Block3H/Area2D" to="HBlocks/Block3H" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="HBlocks/Block3H/Area2D" to="HBlocks/Block3H" method="_on_Area2D_mouse_exited"]

[connection signal="mouse_entered" from="HBlocks/Block4H/Area2D" to="HBlocks/Block4H" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="HBlocks/Block4H/Area2D" to="HBlocks/Block4H" method="_on_Area2D_mouse_exited"]

[connection signal="body_entered" from="Goal" to="VBlocks/BlockMain" method="_on_Goal_body_entered"]


